objects/BusinessSpecificInformation__c.object
<CustomObject>
    <fields>
        <fullName>Segment__c</fullName>
        <inlineHelpText>Installed Base:Any Brownfield where we are upgrad/expand any Invensys system
Competitive Migration:Any Brownfield where we are migrating any system that is not Invensys
Greenfield:New Site/Plant still to be built,consequently no automation system exists</inlineHelpText>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installed Base</fullName>
                </value>
                <value>
                    <fullName>Competitive Migration</fullName>
                </value>
                <value>
                    <fullName>Greenfield</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SmartStruxureLite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SmartStruxure Lite</description>
        <label>SmartStruxure Lite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartStruxureSolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>November2012</description>
        <label>SmartStruxure Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartStruxureliteMultiSites__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SmartStruxure Lite Multi-Sites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StimulusAmount__c</fullName>
        <description>Not critical for ES</description>
        <label>Stimulus Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StimulusFunded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not critical for ES</description>
        <label>Stimulus Funded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StrategicInitiatives__c</fullName>
        <label>Invensys - Strategic Initiatives</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Modernization</fullName>
                </value>
                <value>
                    <fullName>Modernization Assessment</fullName>
                </value>
                <value>
                    <fullName>Modernization Team Support</fullName>
                </value>
                <value>
                    <fullName>Modernization Team Support/Safety</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemTypePlatform__c</fullName>
        <label>System Type / Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalCMProjectReviewDate__c</fullName>
        <label>Technical CM Project Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalProjectBudget__c</fullName>
        <label>Total project budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSquareFeet__c</fullName>
        <label>Total Square Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypeOfBid__c</fullName>
        <description>October12- Ability to track metrics</description>
        <label>Type Of Bid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>EQM (E-way Quote Management Tool)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeOfControls__c</fullName>
        <label>Type Of Controls</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red-wire</fullName>
                </value>
                <value>
                    <fullName>DDC</fullName>
                </value>
                <value>
                    <fullName>On Site</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>ASC-RTU</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValueChainPlayerrequestedQuoteDate__c</fullName>
        <description>Value Chain Player requested Quote Date</description>
        <inlineHelpText>Date requested by the contractor/distributor</inlineHelpText>
        <label>Value Chain Player requested Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VoteScheduled__c</fullName>
        <description>Key milestone in process. Date field</description>
        <label>Vote Scheduled</label>
        <type>Date</type>
    </fields>
    <label>Business Specific Information</label>
    <nameField>
        <displayFormat>BSI-{0000}</displayFormat>
        <label>Business Specific Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Specific Informations</pluralLabel>
    <recordTypes>
        <fullName>Buildings</fullName>
        <active>true</active>
        <label>Digital Energy</label>
    </recordTypes>
    <recordTypes>
        <fullName>BuildingsEnergySolutions</fullName>
        <active>true</active>
        <label>Energy and Sustainability services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Energy</fullName>
        <active>true</active>
        <label>Power Systems</label>
    </recordTypes>
    <recordTypes>
        <fullName>ITB</fullName>
        <active>true</active>
        <label>Secure Power</label>
    </recordTypes>
    <recordTypes>
        <fullName>Industry</fullName>
        <active>true</active>
        <label>Process Automation</label>
    </recordTypes>
    <recordTypes>
        <fullName>PartnerProject</fullName>
        <active>true</active>
        <label>Partner Projects (old)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Power</fullName>
        <active>true</active>
        <label>Power Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>SmartInfrastructure</fullName>
        <active>true</active>
        <label>Smart Infrastructure</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BSI_VR01_CreateNewBSIRecordUnderOpp</fullName>
        <active>true</active>
        <description>User should be able to create only one record for each Business under the Opportunity.</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; (IF(ISNEW() &amp;&amp; RecordTypeId = &apos;012A0000000ndkO&apos;, IF(Opportunity__r.BuildingsEnergySolutionsBSICount__c&gt;=1,true, false) , 
IF(ISNEW() &amp;&amp; RecordTypeId =&apos;012A0000000ndkT&apos;, IF(Opportunity__r.ITBBSICount__c&gt;=1,true, false),
IF(ISNEW() &amp;&amp; RecordTypeId =&apos;012A0000000nkNj&apos;, IF(Opportunity__r.BuildingsBSICount__c&gt;=1,true, false),
IF(ISNEW() &amp;&amp; RecordTypeId =&apos;012A0000000nySb&apos;, IF(Opportunity__r.SmartInfrastructureBSICount__c &gt;=1,true, false),
IF(ISNEW() &amp;&amp; RecordTypeId =&apos;012A0000000njg1&apos;, IF(Opportunity__r.PowerBSICount__c&gt;=1,true, false),
IF(ISNEW() &amp;&amp; RecordTypeId =&apos;012A0000000oE6x&apos;, IF(Opportunity__r.IndustryBSICount__c&gt;=1,true, false),false)))))))</errorConditionFormula>
        <errorMessage>You cannot create more than one record for each Business under the Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BSI_VR02_GoNoGoRanking</fullName>
        <active>true</active>
        <description>Allow user to enter value from range of &quot;0.0&quot; to &quot;7.0&quot;</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; (OR( GoNoGoRanking__c &lt; 0.0 , GoNoGoRanking__c &gt; 7.0))</errorConditionFormula>
        <errorDisplayField>GoNoGoRanking__c</errorDisplayField>
        <errorMessage>Enter value from range 0.0 to 7.0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BSI_VR_OCT14SLS01_AccessToCertainFields</fullName>
        <active>true</active>
        <description>Validates if the logged in user has permission to access certain fields</description>
        <errorConditionFormula>NOT($User.BypassVR__c)
&amp;&amp;

(AND(
	OR(ISBLANK($User.Permission_sets_assigned__c), NOT(CONTAINS($User.Permission_sets_assigned__c, &quot;SA - InvensysGlobalMajorProjectsTeam&quot;))), 
	OR(ISCHANGED(PursuitLeader__c), ISCHANGED(EstimatedPursuitValue__c), ISCHANGED(Licensor__c), ISCHANGED(ProjectManagementContractor__c), ISCHANGED(PursuitPhase__c), ISCHANGED(EndUsertoEPCAwardDate__c),ISCHANGED(Comments__c)),
	NOT(ISPICKVAL(GlobalMajorProjects__c, &apos;Regional MP: Major Project regionally handled&apos;)),
	NOT(ISPICKVAL(GlobalMajorProjects__c, &apos;&apos;))	
	)  
	)</errorConditionFormula>
        <errorMessage>You do not have appropriate permission to modify this BSI.</errorMessage>
    </validationRules>
</CustomObject>